--- a/components/any/ofdpa-tools/deb/debuild/debian/control
+++ b/components/any/ofdpa-tools/deb/debuild/debian/control
@@ -8,5 +8,5 @@ Standards-Version: 3.8.4
 Package: ofdpa-tools
 Architecture: any
 Depends: ofdpa-2.0-closed
-Description: Indigo OFDPA-based OpenFlow Agent
- Indigo (http://projectfloodlight.org/indigo) OpenFlow agent with OF-DPA pipeline
+Description: OF-DPA manual debugging tools
+ Initially from https://github.com/Broadcom-Switch/of-dpa ; tools for manually poking OF-DPA running process
