--- a/components/any/ofdpa-tools/deb/debuild/debian/rules
+++ b/components/any/ofdpa-tools/deb/debuild/debian/rules
@@ -21,10 +21,9 @@ override_dh_shlibdeps:
 	@echo "Skipping dh_shlibdeps"
 
 override_dh_auto_install:
-	mkdir -p $(INSTALL_DIR)/usr/sbin $(INSTALL_DIR)/etc/init.d $(INSTALL_DIR)/usr/share/doc/ofdpa-tools
-	cp $(BUILD_DIR_BASE)/$(DEB_HOST_GNU_TYPE)/bin/ofdpa-tools $(INSTALL_DIR)/usr/sbin
+	mkdir -p $(INSTALL_DIR)/usr/bin $(INSTALL_DIR)/usr/share/doc/ofdpa-tools
+	cp $(BUILD_DIR_BASE)/$(DEB_HOST_GNU_TYPE)/bin/* $(INSTALL_DIR)/usr/bin
 	cp $(IND_SRC)/LICENSE $(INSTALL_DIR)/usr/share/doc/ofdpa-tools
-	#cp $(IND_SRC)/indigo-init $(INSTALL_DIR)/etc/init.d/indigo-
 
 
 
