OFDPA now workingon AS5710

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
@@ -35,6 +35,7 @@ override_dh_auto_install:
                 $(INSTALL_DIR)/lib/modules/$(KERNDIR_ACCTON) \
                 $(INSTALL_DIR)/usr/sbin \
                 $(INSTALL_DIR)/etc/init.d \
+                $(INSTALL_DIR)/etc/default \
                 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE) \
                 $(INSTALL_DIR)/usr/include/ofdpa-2.0 \
                 $(INSTALL_DIR)/usr/share/doc/ofdpa-2.0-closed
@@ -46,10 +47,11 @@ override_dh_auto_install:
         $(INSTALL_DIR)/lib/modules/$(KERNDIR_ACCTON)
 	cp $(BUILD)/librpc_client.so.1 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)/libofdpa_rpc_client.so.1
 	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-quanta-ly2-r0
-	cp $(ACCTON)/ofdpa-powerpc-as5710-54x-r0b $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-as5710-54x-r0b
+	cp $(ACCTON)/ofdpa-powerpc-as5710-54x-r0b $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-accton-as5710-54x-r0
 	cp $(BUILD)/ofagent $(INSTALL_DIR)/usr/sbin/brcm-indigo-ofdpa-ofagent
 	cp $(OFDPA)/application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
 	cp $(OFDPA)/ofdpa-init.sh $(INSTALL_DIR)/etc/init.d/ofdpa
+	cp $(OFDPA)/ofdpa-default.sh $(INSTALL_DIR)/etc/default/ofdpa
 	for doc in $(DOCS) ; do \
         cp $(OFDPA)/$$doc $(INSTALL_DIR)/usr/share/doc/ofdpa-2.0-closed ; \
         done
