ofagent: removed ports from of_features_reply
Breaks protocl in ofv13

--- a/components/any/indigo-ofdpa-ofagent/Makefile
+++ b/components/any/indigo-ofdpa-ofagent/Makefile
@@ -23,7 +23,7 @@ ifndef ONL
 $(error $$ONL is undefined.)
 endif
 
-ONL_REQUIRED_SUBMODULES := infra common ofdpa-2.0 ofdpa-2.0-closed indigo loxigen-artifacts bigcode
+ONL_REQUIRED_SUBMODULES := infra common ofdpa-2.0 indigo loxigen-artifacts bigcode
 include $(ONL)/make/component.mk
 
 
