OF-DPA: added initial init files

--- a/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/rules
+++ b/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/rules
@@ -5,6 +5,8 @@ INSTALL_DIR = $(CURDIR)/$(DEB_DH_INSTALL_SOURCEDIR)
 PACKAGE_NAME = indigo-ofdpa-ofagent
 
 
+IND_SRC := $(ONL)/submodules/ofdpa-2.0/modules/indigo_ofdpa_driver/
+
 
 %:
 	dh $@
@@ -19,8 +21,10 @@ override_dh_shlibdeps:
 	@echo "Skipping dh_shlibdeps"
 
 override_dh_auto_install:
-	mkdir -p $(INSTALL_DIR)/usr/sbin
+	mkdir -p $(INSTALL_DIR)/usr/sbin $(INSTALL_DIR)/etc/init.d $(INSTALL_DIR)/usr/share/doc/indigo-ofdpa-ofagent
 	cp $(BUILD_DIR_BASE)/$(DEB_HOST_GNU_TYPE)/bin/indigo-ofdpa-ofagent $(INSTALL_DIR)/usr/sbin
+	cp $(IND_SRC)/LICENSE $(INSTALL_DIR)/usr/share/doc/indigo-ofdpa-ofagent
+	#cp $(IND_SRC)/indigo-init $(INSTALL_DIR)/etc/init.d/indigo-
 
 
 
