--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
@@ -31,6 +31,7 @@ override_dh_auto_install:
 	mkdir -p    $(INSTALL_DIR)/usr/bin \
                 $(INSTALL_DIR)/lib/modules/$(KERNDIR) \
                 $(INSTALL_DIR)/usr/sbin \
+                $(INSTALL_DIR)/etc/init.d \
                 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE) \
                 $(INSTALL_DIR)/usr/include/ofdpa-2.0 \
                 $(INSTALL_DIR)/usr/share/doc/ofdpa-2.0-closed
@@ -39,7 +40,8 @@ override_dh_auto_install:
         $(INSTALL_DIR)/lib/modules/$(KERNDIR)
 	cp $(BUILD)/librpc_client.so.1 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)/libofdpa_rpc_client.so.1
 	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-quanta-ly2-r0
-	cp $(OFDPA)application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
+	cp $(OFDPA)/application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
+	cp $(OFDPA)/ofdpa-init.sh $(INSTALL_DIR)/etc/init.d/ofdpa
 	for doc in $(DOCS) ; do \
         cp $(OFDPA)/$$doc $(INSTALL_DIR)/usr/share/doc/ofdpa-2.0-closed ; \
         done
