Added Makefile mojo to auto-download ofdpa-2.0-closed if ONL_CLOSED_SOURCE not set
Also fixed an issue where the onlpkg tool was not recognizing
the indigo-ofdpa-ofagent and ofdpa-tools packages.

--- a/components/any/indigo-ofdpa-ofagent/Makefile
+++ b/components/any/indigo-ofdpa-ofagent/Makefile
@@ -24,6 +24,7 @@ $(error $$ONL is undefined.)
 endif
 
 ONL_REQUIRED_SUBMODULES := infra common ofdpa-2.0 indigo loxigen-artifacts bigcode
+ONL_REQUIRED_PACKAGES := ofdpa-2.0-closed:$(ARCH)
 include $(ONL)/make/component.mk
 
 
