--- a/components/any/indigo-ofdpa-ofagent/Makefile.comp
+++ b/components/any/indigo-ofdpa-ofagent/Makefile.comp
@@ -46,7 +46,7 @@ OFDPA_HEADERS := $(dir $(shell $(ONL_PKG_INSTALL) ofdpa-2.0-closed:powerpc --fin
 OFDPA_CLIENT_LIB := $(shell $(ONL_PKG_INSTALL) ofdpa-2.0-closed:powerpc --find-file libofdpa_rpc_client.so.1)
 
 ifndef OFDPA_HEADERS
-$(error Need to download ofdpa-2.0-closed package and put it in $(ONL)/debian/repo/$(ARCH))
+$(error Missing needed ofdpa-2.0-closed package and put it in $(ONL)/debian/repo/$(ARCH))
 endif
 
 
