--- a/components/powerpc/indigo-ofdpa-ofagent/Makefile
+++ b/components/powerpc/indigo-ofdpa-ofagent/Makefile
@@ -12,7 +12,7 @@
 # Do not edit this header.
 # It is used by the SPKG script.
 # ------------------------------
-# Package:onlp
+# Package:indigo-ofdpa-ofagent
 # Architecture:powerpc
 # ------------------------------
 #
