Fixed build issue trying to check out closed source code
Only checkout the ofdpa-2.0-closed repository if ONL_CLOSED_SOURCE
is set.

--- a/components/any/ofdpa-2.0-closed/Makefile
+++ b/components/any/ofdpa-2.0-closed/Makefile
@@ -5,8 +5,11 @@ ifndef ARCH
 $(error $$ARCH is undefined.)
 endif
 
+# if we have access to the closed source, then check it out
+ifdef $(ONL_CLOSED_SOURCE)
 ONL_REQUIRED_SUBMODULES := ofdpa-2.0-closed
-#ONL_REQUIRED_PACKAGES := onlp-platform:$(ARCH) onlp-platform-defaults:$(ARCH)
 ONL_REQUIRED_PACKAGES := kernel-85xx-headers:powerpc
+# else nothing
+endif
 
 include $(ONL)/make/component.mk
