--- a/components/any/ofdpa-2.0-closed/Makefile.comp
+++ b/components/any/ofdpa-2.0-closed/Makefile.comp
@@ -45,6 +45,7 @@ ifndef $(ONL_CLOSED_SOURCE)
 RELEASE=$(shell cat deb/debuild/debian/changelog  | grep ^ofdpa-2.0-closed | head -1 | tr -d '/()/' | cut -f2 -d\ )
 deb: 
 	echo ONL_CLOSED_SOURCE not set- Downloading ofdpa-2.0-closed v=$(RELEASE) from apt.opennetlinux.org
+	mkdir -p $(ONL_REPO)/$(ARCH)
 	cd $(ONL_REPO)/$(ARCH) && wget  http://opennetlinux.org/debian/dists/unstable/main/binary-powerpc/ofdpa-2.0-closed_$(RELEASE)_powerpc.deb
 else
 deb: ofdpa-2.0-closed
