Update linux-3.2.35 to linux-3.2.69
Update linux-3.2.35 to linux-3.2.69, the latest LTS release from the
3.2 branch for the upcoming 2015.08 ONIE release.

Platform testing (building) was performed on all platforms except
those setting their kernel explicitly:
accton_as5700_96x - fsl-sdk-v1.5
accton_as5710_54x - fsl-sdk-v1.5
accton_as6700_32x - fsl-sdk-v1.5
accton_as6710_32x - fsl-sdk-v1.5
accton_as7710_32x - fsl-sdk-v1.7
alphanetworks_snh60a0_320f - 3.14.27
centec_e580_48x6q - fsl-sdk-v1.5
centec_e580_48x2q4z - fsl-sdk-v1.5
centec_e580_20q4z - fsl-sdk-v1.5
fsl_p2020rdbpca - 4.1.1
kvm_x86_64 - 4.1.1
mlnx_x86 - 3.10.0

--- a/build-config/conf/kernel/3.2.69/linux.x86_64.config
+++ b/build-config/conf/kernel/3.2.69/linux.x86_64.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 3.2.35 Kernel Configuration
+# Linux/x86 3.2.69 Kernel Configuration
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -234,6 +234,7 @@ CONFIG_INLINE_WRITE_UNLOCK=y
 # CONFIG_INLINE_WRITE_UNLOCK_BH is not set
 CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
+CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 # CONFIG_FREEZER is not set
 
@@ -302,6 +303,7 @@ CONFIG_X86_LOCAL_APIC=y
 CONFIG_X86_IO_APIC=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 # CONFIG_X86_MCE is not set
+# CONFIG_X86_16BIT is not set
 # CONFIG_I8K is not set
 # CONFIG_MICROCODE is not set
 # CONFIG_X86_MSR is not set
@@ -924,6 +926,7 @@ CONFIG_MD_RAID456=y
 # CONFIG_MULTICORE_RAID456 is not set
 # CONFIG_MD_MULTIPATH is not set
 # CONFIG_MD_FAULTY is not set
+CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
@@ -1632,7 +1635,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
