--- a/machine/kvm_x86_64/installer.conf
+++ b/machine/kvm_x86_64/installer.conf
@@ -10,10 +10,25 @@ description="KVM, VM-X86_64"
 # Default ONIE block device
 install_device_platform()
 {
-    # For the VM demo just hard code the path.  For a real hardware
-    # system a more involved disk discovery and probe approach is
-    # recommended.
-    echo /dev/vda
+    # For the VM demo it depends how the VM is configured.  Look for
+    # two common configurations and then give up.
+
+    # Virtual IO block device
+    if grep -q vda /proc/partitions ; then
+        echo /dev/vda
+        return 0
+    fi
+
+    # SATA, SCSI, USB block device
+    if grep -q sda /proc/partitions ; then
+        echo /dev/sda
+        return 0
+    fi
+
+    echo "ERROR: Unable to determine install block device" > /dev/console
+    echo "Configure your VM to use a SATA controller for the hard disk" > /dev/console
+    echo /dev/sda
+
 }
 
 # Local Variables:
