--- a/builds/swi/amd64/all/Makefile.comp
+++ b/builds/swi/amd64/all/Makefile.comp
@@ -34,11 +34,15 @@ endif
 SWI := onl-$(ONL_RELEASE_VERSION)-amd64-all
 
 # We need the following package binaries
-kernel-3.14-x86_64    := $(shell $(ONL_PKG_INSTALL) kernel-3.14-x86-64-all:amd64 --find-file kernel-3.14-x86_64-all)
+#kernel-3.14-x86_64    := $(shell $(ONL_PKG_INSTALL) kernel-3.14-x86-64-all:amd64 --find-file kernel-3.14-x86_64-all)a
+kernel-3.2-deb7-x86_64    := $(shell $(ONL_PKG_INSTALL) kernel-3.2-deb7-x86-64-all:amd64 --find-file kernel-3.2-deb7-x86_64-all)
+
 kernel-x86_64    := $(shell $(ONL_PKG_INSTALL) kernel-x86-64:amd64 --find-file kernel-x86_64)
 initrd-amd64 := $(shell $(ONL_PKG_INSTALL) initrd-amd64:amd64 --find-file initrd-amd64)
 
-KERNELS := $(kernel-3.14-x86_64) $(kernel-x86_64)
+#KERNELS := $(kernel-3.14-x86_64) $(kernel-x86_64)
+KERNELS := $(kernel-3.2-deb7-x86_64) $(kernel-x86_64)
+
 INITRD := $(initrd-amd64)
 ARCH := amd64
 ONL_BUILD_CONFIG := amd64.all
