swi-config should be cleared on every installer build

--- a/builds/installer/amd64/accton/Makefile.comp
+++ b/builds/installer/amd64/accton/Makefile.comp
@@ -31,4 +31,4 @@ installer-setup::
 	echo "NETDEV=ma1" > boot-config
 	echo "BOOTMODE=swi" >> boot-config
 	echo "SWI=flash2:$(notdir $(INSTALLER_SWI))" >> boot-config
-	echo "SWISRC=$(notdir $(INSTALLER_SWI))" >> swi-config
+	echo "SWISRC=$(notdir $(INSTALLER_SWI))" > swi-config
