update crosstool-ng to 1.21.0 and gcc-4.9.2
Initial commit to upgrade the crosstool-ng package to 1.21.0 and move
to GCC version 4.9.2.  Previously the default GCC version was 4.7.3.

This entails adding new crosstool-ng configuration files for x86 and
powerpc that specify GCC 4.9.2.

In addition various libraries used to build GCC and related companion
utilities also moved forward, like gdb and strace.

Testing Done:

Compiled ONIE for kvm_x86_64 (x86) and fsl_p2020rdbpca
(powerpc-softfloat) and verified:

- everything compiles without errors

- resulting image sizes did not increase

- u-boot (powerpc only) continues to work properly

- ONIE installs and various programs continue to function normally

--- a/build-config/conf/uclibc/0.9.32.1/uclibc.x86_64.config
+++ b/build-config/conf/uclibc/0.9.32.1/uclibc.x86_64.config
@@ -177,7 +177,7 @@ UCLIBC_HAS_STDIO_PUTC_MACRO=y
 UCLIBC_HAS_STDIO_AUTO_RW_TRANSITION=y
 # UCLIBC_HAS_FOPEN_LARGEFILE_MODE is not set
 # UCLIBC_HAS_FOPEN_EXCLUSIVE_MODE is not set
-# UCLIBC_HAS_GLIBC_CUSTOM_STREAMS is not set
+UCLIBC_HAS_GLIBC_CUSTOM_STREAMS=y
 # UCLIBC_HAS_PRINTF_M_SPEC is not set
 UCLIBC_HAS_ERRNO_MESSAGES=y
 # UCLIBC_HAS_SYS_ERRLIST is not set
