grub: extra kernel command line arguments
Fixes #249

Some platforms require extra kernel command line arguments in order to
function properly.  These arguments were not properly carried forward
in all circumstances, such as when installing a NOS.

These extra arguments are specified in a platform's machine.make file
using the $EXTRA_CMDLINE_LINUX variable.

Previously these arguments were dynamically inserted into the ONIE
grub.cfg file using search and replace at image build time.
Unfortunately at *run time* 50_onie_grub script was unaware of these
extra arguments.

This patch moves the extra arguments into a new file, grub-extra.cfg,
that lives in the persistent ONIE grub directory,
/mnt/onie-boot/onie/grub.  This directory already contains other
static grub fragments.  This should be fine as the extra platform
arguments are also static for the life of the machine.

This patch also updates the grub.d helper script, 50_onie_grub, to
include this new fragment in the final grub.cfg file.

In order for a NOS installer to also pick up these extra arguments do the following:

- include /mnt/onie-boot/onie/grub/grub-extra.cfg in the grub.cfg
- add $ONIE_EXTRA_CMDLINE_LINUX to the kernel command line arguments

This patch updates the Demo OS installer to this as an example.

Finally, this patch also updates the build system to add the extra
command line arguments to the recovery ISO.  The recovery ISO was
never getting these extra arguments previously.

Testing Done:

Built ONIE images for the kvm_x86_64 adding
EXTRA_CMDLINE_LINUX="xyz=http://server/path/to/installer?asdf&dfe abcdef"
to the make command line.  Wanted to check that multiple arguments and
URL characters would work OK.

- Booted the recovery ISO in rescue mode.  Verified /proc/cmdline
  contained the appropriate arguments.

- Booted the recovery ISO and embedded the new ONIE.  Rebooted into
  rescue mode and verified /proc/cmdline contained the appropriate
  arguments.  Also verified /mnt/onie-boot/onie/gru

--- a/build-config/recovery/grub-iso.cfg
+++ b/build-config/recovery/grub-iso.cfg
@@ -21,7 +21,7 @@ function onie_entry_end {
   echo "Build Date: $onie_build_date"
 }
 
-ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS<CONSOLE_DEV>,<CONSOLE_SPEED>n8 boot_env=recovery"
+ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS<CONSOLE_DEV>,<CONSOLE_SPEED>n8 <EXTRA_CMDLINE_LINUX> boot_env=recovery"
 
 set default="<GRUB_DEFAULT_ENTRY>"
 
