crosstool-ng gcc-4.7.3: fix missing configuration options
Fixes bug introduced by d7be78c, where new configuration options for
crosstool-ng version 1.21.0 where missing from the original
configuration files.  This affected builds using the old gcc version,
4.7.3.

The previous version of crosstool-ng required the variable
CT_CC_CORE_PASSES_NEEDED=y to be set.  The new version is more fine
grained, requiring these two variable be set:

  CT_CC_CORE_PASS_1_NEEDED=y
  CT_CC_CORE_PASS_2_NEEDED=y

--- a/build-config/conf/crosstool/gcc-4.7.3/uClibc-0.9.32.1/crosstool.x86_64.config
+++ b/build-config/conf/crosstool/gcc-4.7.3/uClibc-0.9.32.1/crosstool.x86_64.config
@@ -281,6 +281,8 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 CT_CC="gcc"
 CT_CC_VERSION="4.7.3"
 CT_CC_CORE_PASSES_NEEDED=y
+CT_CC_CORE_PASS_1_NEEDED=y
+CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
 # CT_CC_V_4_8_1 is not set
