--- a/build-config/conf/crosstool/gcc-4.7.3/uClibc-0.9.33.2/crosstool.x86_64.config
+++ b/build-config/conf/crosstool/gcc-4.7.3/uClibc-0.9.33.2/crosstool.x86_64.config
@@ -281,6 +281,8 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 CT_CC="gcc"
 CT_CC_VERSION="4.7.3"
 CT_CC_CORE_PASSES_NEEDED=y
+CT_CC_CORE_PASS_1_NEEDED=y
+CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
 # CT_CC_V_4_8_1 is not set
